# NewSegmentation

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini  vscode.env
experiments/: evaluate.ipynb  wkreader.py
newsegmentation/: __init__.py  _algorithms.py  _architecture.py  _databasetrans.py  _gtreader.py  _slm.py  _structures.py
newsegmentation/newsegmentation.egg-info/: PKG-INFO  SOURCES.txt
src/: _architecture.py  _dserial.py
src/newsegmentation/: __init__.py  _algorithms.py  _architecture.py  _databasetrans.py  _dserial.py  _gtreader.py  _structures.py  _tdm.py
src/newsegmentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/src.egg-info/: PKG-INFO  SOURCES.txt
test/: debug_0.py  package_tester.py
test/test_db/data/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+160 more)
test/test_db/ground_truth/: 0.gt  1.gt  10.gt  100.gt  101.gt  102.gt  103.gt  104.gt  105.gt  106.gt  107.gt  108.gt  109.gt  11.gt  110.gt  111.gt  112.gt  113.gt  114.gt  115.gt  116.gt  117.gt  118.gt  119.gt  12.gt  120.gt  121.gt  122.gt  123.gt  124.gt  125.gt  126.gt  127.gt  128.gt  129.gt  13.gt  130.gt  131.gt  132.gt  133.gt  (+160 more)
tests/: myfile.vtt  package_tester.py
topic_segmentation/: build_test.py  copilot_test.py
(+4 files in other folders)
