[metadata]
name = newsegmentation
version = 0.3.1
author = Alberto Palomo Alonso
author_email = alberto.palomo@uah.es
description = Package for news segmentation architecture.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iTzAlver/newsegmentation
project_urls =
    Bug Tracker = https://github.com/iTzAlver/newsegmentation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = newsegmentation
packages = find:
python_requires = >=3.6

[options.packages.find]
where = newsegmentation